fix vertical red line spacing responsive

--- a/excellalabs/static/css/_list_pages.scss
+++ b/excellalabs/static/css/_list_pages.scss
@@ -187,10 +187,6 @@
         padding-top: 88px; 
     }
 
-    .list_item_body {
-        //height: 300px;
-    }
-
     .event_list_item_content {
         padding-left: 30px;
         padding-right: 30px;
@@ -233,14 +229,6 @@
 
 //larger than lg
 @media (min-width: 1200px) {
-    .vertical_red_line {
-        border-left: 4px solid $coral_red;
-        height: 118px;
-        display: inline-block;
-        margin-right: 60px;
-        margin-left: 60px;
-        margin-top: 10px;
-    }
 
     .list {
         padding-left: 130px !important;
@@ -282,6 +270,13 @@
         padding-left: 30px;
     }
 
+    .vertical_red_line {
+        border-left: 4px solid $coral_red;
+        height: 118px;
+        display: inline-block;
+        margin-top: 10px;
+    }
+
 }
 
 
@@ -292,5 +287,12 @@
 
     .list_item_graphic {
         height: 600px;
+    }
+
+    .vertical_red_line {
+        border-left: 4px solid $coral_red;
+        height: 118px;
+        display: inline-block;
+        margin-top: 10px;
     }
 }
